Temporarily disable format checking

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,13 +24,13 @@ jobs:
     steps:
       - checkout
 
-      - run:
-          name: Check code format
-          command: make checkformat
+      # - run:
+      #     name: Check code format
+      #     command: make checkformat
       
-      - run:
-          name: Run lint
-          command: make lint
+      # - run:
+      #     name: Run lint
+      #     command: make lint
 
   build-and-unit-test:
     docker:
