--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
   validate-code:
     docker:
       - image: cimg/android:2024.01-node
+    resource_class: medium
     steps:
       - checkout
 
@@ -35,6 +36,7 @@ jobs:
   build-and-unit-test:
     docker:
       - image: cimg/android:2024.01
+    resource_class: medium
     steps:
       - checkout
 
