--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,10 @@ workflows:
  
 jobs:
   validate-code:
-    docker:
-      - image: cimg/android:2024.01-node
-    resource_class: medium
+    executor:
+      name: android/android-machine
+      resource-class: medium
+      tag: 2024.01.1
     steps:
       - checkout
 
@@ -35,9 +36,10 @@ jobs:
       #     command: make lint
 
   build-and-unit-test:
-    docker:
-      - image: cimg/android:2024.01
-    resource_class: medium
+    executor:
+      name: android/android-machine
+      resource-class: medium
+      tag: 2024.01.1
     steps:
       - checkout
 
