--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,24 +21,24 @@ jobs:
   validate-code:
     executor:
       name: android/android-machine
-      resource-class: medium
+      resource-class: large
       tag: 2024.01.1
     steps:
       - checkout
 
       # TODO: Re-enable these steps once formatting and linting issues are resolved
-      - run:
-          name: Check code format
-          command: make checkformat
+      # - run:
+      #     name: Check code format
+      #     command: make checkformat
       
-      - run:
-          name: Run lint
-          command: make lint
+      # - run:
+      #     name: Run lint
+      #     command: make lint
 
   build-and-unit-test:
     executor:
       name: android/android-machine
-      resource-class: medium
+      resource-class: large
       tag: 2024.01.1
     steps:
       - checkout
@@ -76,7 +76,7 @@ jobs:
   functional-test:
     executor:
       name: android/android-machine
-      resource-class: large
+      resource-class: medium
       tag: 2024.01.1
     steps:
       - checkout
