--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
   validate-code:
     executor:
       name: android/android-docker
-      resource-class: large
+      resource-class: medium
       tag: 2024.01.1
     steps:
       - checkout
@@ -38,7 +38,7 @@ jobs:
   build-and-unit-test:
     executor:
       name: android/android-docker
-      resource-class: large
+      resource-class: medium
       tag: 2024.01.1
     steps:
       - checkout
