--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,27 +101,21 @@ jobs:
 
       - android/restore-build-cache
 
-      - android/create-avd:
-          avd-name: myavd
-          install: true
+      # By default this command handles restoring and saving the Gradle cache
+      - android/start-emulator-and-run-tests:
+          # It should match the name seen in the "sdkmanager --list" output
           system-image: system-images;android-29;default;x86
-
-      - android/start-emulator:
-          avd-name: myavd
-          no-window: true
-          post-emulator-launch-assemble-command: ""
-
-      - run:
-          name: Run Functional tests
-          command: |
-            make functional-test-coverage
+          # The command to be run, while waiting for emulator startup
+          post-emulator-launch-assemble-command: make assemble-phone
+          # The test command
+          test-command: make functional-test-coverage
       
       # Upload code coverage report to Codecov
       - codecov/upload:
           file: code/edgebridge/build/reports/coverage/androidTest/phone/connected/debug/report.xml
           flags: functional-tests
 
-      - android/save-gradle-cache
+      - android/save-build-cache
 
       - store_artifacts:
           path: code/edgebridge/build/reports/androidTests
