--- a/code/gradle.properties
+++ b/code/gradle.properties
@@ -2,6 +2,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.caching=true
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app"s APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
@@ -15,11 +16,10 @@ android.nonTransitiveRClass=true
 
 # Publication variables
 moduleName=edgebridge
-moduleVersion=2.1.0
+moduleVersion=3.0.0
 
 mavenRepoName=AdobeMobileEdgeBridgeSdk
 mavenRepoDescription=Adobe Experience Platform Edge Bridge extension for the Adobe Experience Platform Mobile SDK
 
 # Mobile Core dependency version
 mavenCoreVersion=3.0.0
-androidxAnnotationVersion=1.0.0
