Revert removal of make assemble-phone command and upgrade resource class to large

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ jobs:
   functional-test:
     executor:
       name: android/android-machine
-      resource-class: medium
+      resource-class: large
       tag: 2024.01.1
     steps:
       - checkout
@@ -105,6 +105,8 @@ jobs:
       - android/start-emulator-and-run-tests:
           # It should match the name seen in the "sdkmanager --list" output
           system-image: system-images;android-29;default;x86
+          # The command to be run, while waiting for emulator startup
+          post-emulator-launch-assemble-command: make assemble-phone
           # The test command
           test-command: make functional-test-coverage
       
