Update description name

--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
     inputs:
       version: 
-        description: 'New version to use for the Edge Consent extension. Example: 3.0.0'
+        description: 'New version to use for the Edge Bridge extension. Example: 3.0.0'
         required: true
 
       core-dependency:
