--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,14 +30,13 @@ jobs:
 
       - android/restore-build-cache
 
-      # TODO: Re-enable these steps once formatting and linting issues are resolved
-      # - run:
-      #     name: Check code format
-      #     command: make checkformat
+      - run:
+          name: Check code format
+          command: make checkformat
       
-      # - run:
-      #     name: Run lint
-      #     command: make lint
+      - run:
+          name: Run lint
+          command: make lint
 
       - android/save-gradle-cache
 
