Standardize step name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
       - android/restore-build-cache
 
       - run:
-          name: Build Javadoc
+          name: Javadoc
           command: make javadoc
 
       # Save Javadoc results
