--- a/.github/workflows/maven-snapshot.yml
+++ b/.github/workflows/maven-snapshot.yml
@@ -1,8 +1,7 @@
 name: Publish Snapshot
 on:
-  push:
-    branches:
-      - staging
+  workflow_dispatch:
+
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -11,6 +10,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: 17
       - name: Cache Gradle packages
         uses: actions/cache@v2
@@ -25,7 +25,7 @@ jobs:
         run: |
           echo $GPG_SECRET_KEYS | base64 --decode | gpg --import --no-tty --batch --yes
           echo $GPG_OWNERTRUST | base64 --decode | gpg --import-ownertrust --no-tty --batch --yes
-      - name: Publish to Maven Central Repository
+      - name: Publish to Maven Snapshot Repository
         run: make ci-publish-staging
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
