--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
     executor:
       name: android/android-docker
       resource-class: medium
-      tag: 2024.01.1
+      tag: 2024.01.1-node
     steps:
       - checkout
 
