--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,10 +38,10 @@ jobs:
     steps:
       - checkout
 
-      - android/restore-gradle-cache
+      - android/restore-gradle-cache:
           cache-prefix: << pipeline.parameters.gradle-cache-prefix >>
 
-      - android/restore-build-cache
+      - android/restore-build-cache:
           cache-prefix: << pipeline.parameters.build-cache-prefix >>
 
       - run:
@@ -52,10 +52,10 @@ jobs:
           name: Lint
           command: make lint
 
-      - android/save-gradle-cache
+      - android/save-gradle-cache:
           cache-prefix: << pipeline.parameters.gradle-cache-prefix >>
 
-      - android/save-build-cache
+      - android/save-build-cache:
           cache-prefix: << pipeline.parameters.build-cache-prefix >>
 
       # Store Lint report
@@ -70,10 +70,10 @@ jobs:
     steps:
       - checkout
 
-      - android/restore-gradle-cache
+      - android/restore-gradle-cache:
           cache-prefix: << pipeline.parameters.gradle-cache-prefix >>
 
-      - android/restore-build-cache
+      - android/restore-build-cache:
           cache-prefix: << pipeline.parameters.build-cache-prefix >>
 
       - run:
@@ -102,10 +102,10 @@ jobs:
       - store_test_results:
           path: << pipeline.parameters.build-path >>/test-results/testPhoneDebugUnitTest
 
-      - android/save-gradle-cache
+      - android/save-gradle-cache:
           cache-prefix: << pipeline.parameters.gradle-cache-prefix >>
 
-      - android/save-build-cache
+      - android/save-build-cache:
           cache-prefix: << pipeline.parameters.build-cache-prefix >>
 
       # Upload code coverage report to Codecov
@@ -121,7 +121,7 @@ jobs:
     steps:
       - checkout
 
-      - android/restore-build-cache
+      - android/restore-build-cache:
           cache-prefix: << pipeline.parameters.build-cache-prefix >>
 
       # By default this command handles restoring and saving the Gradle cache
@@ -139,7 +139,7 @@ jobs:
           file: << pipeline.parameters.build-path >>/reports/coverage/androidTest/phone/debug/connected/report.xml
           flags: functional-tests
 
-      - android/save-build-cache
+      - android/save-build-cache:
           cache-prefix: << pipeline.parameters.build-cache-prefix >>
 
       - store_artifacts:
