Update all AEP dependencies to use SNAPSHOT builds

--- a/code/gradle.properties
+++ b/code/gradle.properties
@@ -34,4 +34,4 @@ mavenRepoName=AdobeMobileEdgeBridgeSdk
 mavenRepoDescription=Adobe Experience Platform Edge Bridge extension for the Adobe Experience Platform Mobile SDK
 
 # Mobile Core dependency version
-mavenCoreVersion=3.0.0
+mavenCoreVersion=3.0.0-SNAPSHOT
