--- a/Documentation/tutorials/EdgeBridgeTutorialAppFinal/gradle.properties
+++ b/Documentation/tutorials/EdgeBridgeTutorialAppFinal/gradle.properties
@@ -32,3 +32,5 @@ android.useAndroidX=true
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
