--- a/Documentation/tutorials/EdgeBridgeTutorialAppFinal/app/build.gradle
+++ b/Documentation/tutorials/EdgeBridgeTutorialAppFinal/app/build.gradle
@@ -52,14 +52,15 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.2'
 
     // Add dependencies on Adobe Experience Platform Mobile extensions
-    implementation 'com.adobe.marketing.mobile:assurance:3.0.0'
-    implementation 'com.adobe.marketing.mobile:core:3.0.0'
-    implementation 'com.adobe.marketing.mobile:lifecycle:3.0.0'
-    implementation 'com.adobe.marketing.mobile:edge:3.0.0'
-    implementation 'com.adobe.marketing.mobile:edgeconsent:3.0.0'
-    implementation 'com.adobe.marketing.mobile:edgeidentity:3.0.0'
+    implementation platform('com.adobe.marketing.mobile:sdk-bom:3.0.0')
+    implementation 'com.adobe.marketing.mobile:assurance'
+    implementation 'com.adobe.marketing.mobile:core'
+    implementation 'com.adobe.marketing.mobile:lifecycle'
+    implementation 'com.adobe.marketing.mobile:edge'
+    implementation 'com.adobe.marketing.mobile:edgeconsent'
+    implementation 'com.adobe.marketing.mobile:edgeidentity'
 
     //* Edge Bridge Tutorial - code section (1/2)
-    implementation 'com.adobe.marketing.mobile:edgebridge:3.0.0'
+    implementation 'com.adobe.marketing.mobile:edgebridge'
     // Edge Bridge Tutorial - code section (1/2) */
 }
