--- a/code/edgebridge/src/main/AndroidManifest.xml
+++ b/code/edgebridge/src/main/AndroidManifest.xml
@@ -13,5 +13,12 @@
 
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <application>
+        <service android:name="com.adobe.marketing.mobile.ExtensionDiscoveryService"
+            android:exported="false">
+            <meta-data
+                android:name="com.adobe.marketing.mobile.edge.bridge.EdgeBridgeExtension"
+                android:value="Extension" />
+        </service>
+    </application>
 </manifest>
